<resources>
    <string name="app_name">HandBrainTokTok</string>
    <string name="app_title">손   뇌   톡   톡</string>
    <string name="start_game">게 임 시 작</string>
    <string name="various_game">다 양 한 게 임</string>
    <string name="my_records">내  기 록</string>
    <string name="how_to_play">게 임  방 법</string>
    <string name="setting">설 정</string>
    <string name="title_activity_game_start">GameStartActivity</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="per_week">주 간</string>
    <string name="per_month">월 간</string>
    <string name="per_day">일 간</string>
    <string name="my_change">나의 변화 추이</string>
</resources>
