<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    android:background="@color/white">


    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />
    <Button
        android:id="@+id/button_start_game"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:padding="16dp"
        android:textSize="24sp"
        android:fontFamily="@font/nunito_regular"
        android:background="@drawable/rounded_button"
        android:text="@string/start_game"
        />
    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />
    <Button
        android:id="@+id/button_various_game"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:padding="16dp"
        android:textSize="24sp"
        android:background="@drawable/rounded_button"
        android:text="@string/various_game"/>
    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />
    <Button
        android:id="@+id/button_records"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:padding="16dp"
        android:textSize="24sp"
        android:background="@drawable/rounded_button"
        android:text="@string/my_records"/>
    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />
    <Button
        android:id="@+id/button_method"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:textSize="24sp"
        android:background="@drawable/rounded_button"
        android:padding="16dp"
        android:text="@string/how_to_play"/>
    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />
    <Button
        android:id="@+id/button_settings"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:textSize="24sp"
        android:padding="16dp"
        android:text="@string/setting"/>



</LinearLayout>