<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.myapplication.RecordActivity">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_change"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <com.example.myapplication.CustomGraphView
        android:id="@+id/customGraphView"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="72dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/dailyButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/per_day"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/weeklyButton"
        app:layout_constraintTop_toBottomOf="@id/customGraphView" />

    <Button
        android:id="@+id/weeklyButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/per_week"
        app:layout_constraintStart_toEndOf="@id/dailyButton"
        app:layout_constraintEnd_toStartOf="@id/monthlyButton"
        app:layout_constraintTop_toBottomOf="@id/customGraphView"
        android:layout_margin="16dp" />

    <Button
        android:id="@+id/monthlyButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/per_month"
        app:layout_constraintStart_toEndOf="@id/weeklyButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/customGraphView"
        android:layout_margin="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
